4G stopped working after calling sudo apt upgrade
Describe your issue
I ran "sudo apt upgrade" one hour ago (I do it daily). I noticed that I lost the network during the upgrade, that's why I used the wifi to perform the upgrade correctly but even after several reboots, the 4G no longer works.
Expected Behavior
The 4G still works after upgrading.
Observed Behavior
The 4G no longer works.
Specific area or package affected
I noticed mms-tng got upgraded and some messages in the logs mentioned it but I'm not sure that it's the root cause.
How reproducible is the bug?
It's always reproducible since February 21th 2022.
Steps to reproduce the bug
- open terminal
- type
sudo apt upgrade
What device are you using?
Pinephone
Which mobian repository are you using?
Bookworm
How did you get your Mobian Image?
Screenshots if relevant
Solutions you have tried
Reboot Disable and enable the mobile data
Related non-duplicate issues
Additional Information
journalctl -b journalctl_b_logs.txt